	  (commented, i.e. inactive)).

	* pmodel.response.pFormula: make sure supplied formula is a pFormula before we continue
	  (coerce to pFormula), fixes bugs like:
	    pmodel.response.pFormula(regular_formula, data = dat, model = "pooling")
	     # Error in names(y) <- namesy :
	     # 'names' attribute [482] must be the same length as the vector [0]
	   still some bugs left in pmodel.response, see testfile: tests/test_model.matrix_pmodel.response.R.

	* some testfiles: fixed wired encodings.

	* lag.pseries: modified to handle negative lags (=leading values).
	* lead.pseries: added function as a wrapper for lag.pseries(x, k=-1) for convenience,
	  i.e. lag(x, k = -1) == lead(x, k = 1).
	* diff.pseries: prevented negative lags as input to avoid confusion.
	* doc for pseries functions are made available under their name, e.g. ?lag now displays helpfile for
	  lag.pseries in the help overview (besides e.g. stats::lag).
	* pdim.default: make error message "duplicate couples (time-id)" printed as proper error message
	  (removed cat() around the message in stop(), was printed as regular string on screen before).
	* plm.data: slight improvement for printed outputs (spelling and spacing).
	* indexes: fixed return value (was always NULL).
	* doc updates: ?pdim: added section about possible different return values for pdim(pdata.frame) and
	  pdim(panelmodel_object); others: linkage to base functions enabled, spelling.

Changes since version 1.5-15

	* punbalancedness: new function for unbalancedness measures for panel data as
	  in Ahrens/Pincus (1981); added doc and testfile for punbalancedness.
	* DESCRIPTION: added URLs for package on CRAN and package on R-Forge.
	* model.matrix.pFormula and plm.fit: include 'assign' and 'contrasts' attributes (if any) in model fit
	* Vignette: summary(lme_mod)$coef$fixed -> summary(lme_mod)$coefficients$fixed to avoid
	  partial matching of 'coef' to 'coefficients' by "$" operator.