@@ -1,6 +1,7 @@
 ## Tests for correct construction in case of NAs of model.matrix[.pFormula|.plm] and pmodel.response.[pFormula|.plm]
 
 # see, if NA dropping in construction of model.matrix and pmodel.response is done correctly.
+# Some special NA patterns were not handeled correctly pre rev. 192 if pmodel.repsonse or model.matrix were called directly
 
 # 1) model.matrix[.pFormula|.plm] 
 # 2) pmodel.response.[pFormula|.plm]
@@ -16,7 +17,12 @@ plm_re         <- plm(form, data=Grunfeld, model="random")
 plm_re_time    <- plm(form, data=Grunfeld, model="random", effect = "time")
 plm_re_nerlove <- plm(form, data=Grunfeld, model="random", random.method = "nerlove")
 
-
+plm_pool_pFormula       <- plm(pFormula(form), data=Grunfeld, model="pooling")
+plm_fe_pFormula         <- plm(pFormula(form), data=Grunfeld, model="within")
+plm_fe_tw_pFormula      <- plm(pFormula(form), data=Grunfeld, model="within", effect = "twoways")
+plm_re_pFormula         <- plm(pFormula(form), data=Grunfeld, model="random")
+plm_re_time_pFormula    <- plm(pFormula(form), data=Grunfeld, model="random", effect = "time")
+plm_re_nerlove_pFormula <- plm(pFormula(form), data=Grunfeld, model="random", random.method = "nerlove")
 
 # create Grunfeld pdata.frame
 pGrunfeld <- pdata.frame(Grunfeld, index = c("firm", "year"))
@@ -56,38 +62,36 @@ pdim(plm_fe_NA_indep_var_tw   <- plm(form, data=pGrunfeld_NA_indep_var, model="w
 ##### inspect row numbers in model.frame, model.matrix for various data with and without NAs ####
 
 
-nrow(plm:::model.matrix.plm(plm_fe_NA_row)) # 199 rows - ok
-# nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_row, model="within")) # error
-# Error in tapply(z, effect, "mean") : arguments must have same length
-
-nrow(plm:::model.matrix.plm(plm_fe_NA_dep_var)) # 199 - ok
-
-nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="within")) # NOT OK: 200, but should be 199
-nrow(model.matrix(pFormula(form), data=pGrunfeld_NA_dep_var, model="within")) # NOT OK: 200, but should be 199
-
-nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="pooling")) # NOT OK: 200, but should be 199
-nrow(model.matrix(pFormula(form), data=pGrunfeld_NA_dep_var, model="within")) # NOT OK: 200, but should be 199
-
-# NOT OK: 200, but should be 199
-# wrong transformation applied: balanced transformation instead of unbalanced
-# due to the not sanitized data argument in model.matrix.pFormula
-# -> see following comparision to model.matrix from plm interface
-nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="within", effect = "twoways"))
-
-  # NOT OK: Should be equal, but is not due to wrong transformation
-  # drop first row b/c not in model.matrix.plm()
-  all.equal(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="within", effect = "twoways")[-1, ],
-            plm:::model.matrix.plm(plm_fe_NA_dep_var_tw), check.attributes = FALSE)
+if (nrow(plm:::model.matrix.plm(plm_fe_NA_row)) != 199) stop("NA not detected") # 199 rows - ok
+if (nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_row, model="within")) != 199) stop("NA not detected") # 199 rows - ok
+if (nrow(plm:::model.matrix.pFormula(pFormula(form), data=pGrunfeld_NA_row, model="within")) != 199) stop("NA not detected")
 
 
+if (nrow(plm:::model.matrix.plm(plm_fe_NA_dep_var)) != 199) stop("NA not detected") # 199 - ok
+
+if (nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="within")) != 199) stop("NA not detected") # NOT OK: 200, but should be 199
+if (nrow(model.matrix(pFormula(form), data=pGrunfeld_NA_dep_var, model="within")) != 199)  stop("NA not detected") # NOT OK: 200, but should be 199
+
+if (nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="pooling")) != 199)  stop("NA not detected") # NOT OK: 200, but should be 199
+if (nrow(model.matrix(pFormula(form), data=pGrunfeld_NA_dep_var, model="within")) != 199)  stop("NA not detected") # NOT OK: 200, but should be 199
+
+# ok - 199
+if (nrow(plm:::model.matrix.pFormula(form, data=pGrunfeld_NA_dep_var, model="within", effect = "twoways")) != 199) stop("NA not detected")
+if (nrow(plm:::model.matrix.pFormula(pFormula(form), data=pGrunfeld_NA_dep_var, model="within", effect = "twoways")) != 199) stop("NA not detected")
+
+
+if (!isTRUE(all.equal(plm:::model.matrix.pFormula(pFormula(form), data=pGrunfeld_NA_dep_var, model="within", effect = "twoways"),
+                      plm:::model.matrix.plm(plm_fe_NA_dep_var_tw), check.attributes = FALSE))) {
+  stop("model matrices from estimated model and from formula interface not equal")}
+  
 ########### 1) model.matrix[.pFormula|.plm] ###########
 
 
 # pooling and within models work if data is a pdata.frame
 modmat_pFormula_pdataframe_pool    <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="pooling") # works
 modmat_pFormula_pdataframe_fe      <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="within")  # works
-modmat_pFormula_pdataframe_fe_time <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="within", effect = "time")  # works
-modmat_pFormula_pdataframe_fe_tw   <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="within", effect = "twoway")  # works
+modmat_pFormula_pdataframe_fe_time <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="within", effect = "time")   # works
+modmat_pFormula_pdataframe_fe_tw   <- plm:::model.matrix.pFormula(form, data=pGrunfeld, model="within", effect = "twoway") # works
 
 
 # RE fails due to theta = NULL in model.matrix.pFormula (also model.matrix.pFormula needs facilities for random.method (ercomp(, method)))
@@ -106,34 +110,35 @@ modmat_pFormula_pdataframe_fe_tw   <- plm:::model.matrix.pFormula(form, data=pGr
 
 
 # 200 rows resulting form model.matrix.default - ok for this data set
-nrow(model.matrix(inv ~ value + capital, data=Grunfeld))
-# 200 rows,  - ok for this data set
-nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld)))
+if (nrow(model.matrix(inv ~ value + capital, data=Grunfeld)) != 200) stop("not correct")
+# 200 rows - ok for this data set
+if (nrow(plm:::model.matrix.pFormula(inv ~ value + capital, data=pdata.frame(Grunfeld))) != 200) stop("not correct")
+if (nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld))) != 200) stop("not correct")
 
 
 # 199 rows resulting from model.matrix.default - ok
 # NA in dependent variable detected and thus row in model.matrix dropped
-nrow(stats::model.matrix(inv ~ value + capital, data=Grunfeld_NA_dep_var))
+if (nrow(stats::model.matrix(inv ~ value + capital, data=Grunfeld_NA_dep_var)) != 199) stop("NA not detected")
 
 # 199 rows in model.frame of estimated plm_model$model - ok
-nrow(plm(inv ~ value + capital, data=pdata.frame(Grunfeld_NA_dep_var))$model)
+if (nrow(plm(inv ~ value + capital, data=pdata.frame(Grunfeld_NA_dep_var))$model) != 199) stop("NA not detected")
 
 
-# NOT OK: 200 returend, 199 rows should result from model.matrix.pFormula
+# NOT OK: 200 returned, 199 rows should result from model.matrix.pFormula
 # NA in dependent variable _not_ detected and thus row in model.matrix _not_ dropped
 # This is due to the Formula package which is does not behave as stats::model.matrix.default does
 # for NA handling in dependent variable
-nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_dep_var)))
+if (nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_dep_var))) != 199) stop("NA not detected")
+if (nrow(plm:::model.matrix.pFormula(inv ~ value + capital, data=pdata.frame(Grunfeld_NA_dep_var))) != 199) stop("NA not detected")
 
-# 200 returend - ok
+
+# 199 returned - ok
 # NA in independent variable is detected and thus row in model.matrix is dropped
-nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_indep_var)))
+if (nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_indep_var))) != 199) stop("NA not detected")
 
 # 199 returned - ok
 # NA row is detected and thus dropped
-nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_row)))
-
-
+if (nrow(plm:::model.matrix.pFormula(pFormula(inv ~ value + capital), data=pdata.frame(Grunfeld_NA_row))) != 199) stop("NA not detected")
 
 
 
@@ -144,45 +149,28 @@ modmat_plm_re   <- model.matrix(plm_re)
 modmat_plm_re_time   <- model.matrix(plm_re_time)
 modmat_plm_re_nerlove   <- model.matrix(plm_re_nerlove)
 
-# delete rownames to enable comparison with all.equal()
-rownames(modmat_plm_pool) <- NULL
-rownames(modmat_plm_fe) <- NULL
-rownames(modmat_plm_re) <- NULL
-rownames(modmat_plm_re_time) <- NULL
-rownames(modmat_plm_re_nerlove) <- NULL
-
-# rownames(modmat_pFormula_pool) <- NULL
-# rownames(modmat_pFormula_fe) <- NULL
-rownames(modmat_pFormula_pdataframe_pool) <- NULL
-rownames(modmat_pFormula_pdataframe_fe) <- NULL
-# rownames(modmat_pFormula_pdataframe_re) <- NULL
-# rownames(modmat_pFormula_pdataframe_re_time) <- NULL
-# rownames(modmat_pFormula_pdataframe_re_nerlove) <- NULL
-
 #### Tests
 
 # w/o any NAs
 ### interfaces: plm vs. pFormula
-if (!all.equal(modmat_plm_pool,       modmat_pFormula_pdataframe_pool)) stop("FAIL!")
-if (!all.equal(modmat_plm_fe,         modmat_pFormula_pdataframe_fe)) stop("FAIL!")
-#if (!all.equal(modmat_plm_re,         modmat_pFormula_pdataframe_re)) stop("FAIL!")
-#if (!all.equal(modmat_plm_re_time,    modmat_pFormula_pdataframe_re_time)) stop("FAIL!")
-#if (!all.equal(modmat_plm_re_nerlove, modmat_pFormula_pdataframe_re_nerlove)) stop("FAIL!")
+if (!isTRUE(all.equal(modmat_plm_pool,       modmat_pFormula_pdataframe_pool, check.attributes = FALSE))) stop("FAIL!")
+if (!isTRUE(all.equal(modmat_plm_fe,         modmat_pFormula_pdataframe_fe,   check.attributes = FALSE))) stop("FAIL!")
+#if (!isTRUE(all.equal(modmat_plm_re,         modmat_pFormula_pdataframe_re, check.attributes = FALSE))) stop("FAIL!")
+#if (!isTRUE(all.equal(modmat_plm_re_time,    modmat_pFormula_pdataframe_re_time, check.attributes = FALSE))) stop("FAIL!")
+#if (!isTRUE(all.equal(modmat_plm_re_nerlove, modmat_pFormula_pdataframe_re_nerlove, check.attributes = FALSE))) stop("FAIL!")
 
-
-
-
-# add more Tests here
 
 
 
 ########### 2) pmodel.response.[pFormula|.plm] ###########
-# pmodel.response on regular data.frame (not pdata.frame)
+
+# pmodel.response on regular data.frame (not pdata.frame) -> need to supply a pdata.frame!
 # plm:::pmodel.response.pFormula(form, data = Grunfeld, model = "pooling") # warning still in v1.5-14/rev. 175
 # plm:::pmodel.response.pFormula(form, data = Grunfeld, model = "within")  # fails
 # plm:::pmodel.response.pFormula(form, data = Grunfeld, model = "random")  # fails
 
-# pooling and within modls work on pdata.frame with fix in v1.5-14/rev. 175
+
+# pooling and within models work on pdata.frame with fix in v1.5-14/rev. 175
 resp_pFormula_pool  <- plm:::pmodel.response.pFormula(form, data = pGrunfeld, model = "pooling")
 resp_pFormula_fe    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld, model = "within")
 resp_pFormula_fe_tw <- plm:::pmodel.response.pFormula(form, data = pGrunfeld, model = "within", effect = "twoways")
@@ -195,12 +183,8 @@ resp_pFormula_fe_tw <- plm:::pmodel.response.pFormula(form, data = pGrunfeld, mo
 
 
 
-# dataset with NA in response variable yields error for FE and RE model
-#  -> in the called function model.matrix.pFormula, the indexes are extracted from data (a pdata.frame)
-#     and do not necessarily match the length of the extracted response (X, a model.matrix), because
-#     in X, NAs are already dropped
 
-# resp_pFormula_NA_depvar_fe   <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within") # error
+resp_pFormula_NA_depvar_fe   <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within")
 # resp_pFormula_NA_depvar_re   <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "random") # error
 #
 #Error in model.matrix.pFormula(pFormula(formula), data = data, model = model,  : 
@@ -219,18 +203,21 @@ resp_plm_NA_indepvar_re    <- plm:::pmodel.response.plm(plm(form, data = pGrunfe
 
 
 # pmodel.repsonse.pFormula with NA in dependent variable
-resp_pFormula_NA_depvar_pool    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "pooling")
-
-# NOT OK: errors
-#resp_pFormula_NA_depvar_fe    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within")
-#resp_pFormula_NA_depvar_fe_tw <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within", effect = "twoway")
+resp_pFormula_NA_depvar_pool  <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "pooling")
+resp_pFormula_NA_depvar_fe    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within")
+resp_pFormula_NA_depvar_fe_tw <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "within", effect = "twoway")
+# NOT OK: error
 #resp_pFormula_NA_depvar_re    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_dep_var, model = "random")
 
 # pmodel.repsonse.pFormula with NA in _in_dependent variable
+# NA in independent variable is detected and vector of dependent variable (response) adjusted according (drop the observation)
+# -> resulting response has 199 entries, albeit there are 200 obs for the response but NA in independent variable
+# -> thus, the results of pmodel.repsonse and model.matrix match
 resp_pFormula_NA_indepvar_pool  <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_indep_var, model = "pooling")
 resp_pFormula_NA_indepvar_fe    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_indep_var, model = "within")
 resp_pFormula_NA_indepvar_fe_tw <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_indep_var, model = "within", effect = "twoway")
 # resp_pFormula_NA_indepvar_re    <- plm:::pmodel.response.pFormula(form, data = pGrunfeld_NA_indep_var, model = "random") # error
+
 
 
 
@@ -243,59 +230,22 @@ resp_plm_fe_tw <- pmodel.response(plm_fe_tw)
 resp_plm_re    <- pmodel.response(plm_re)
 
 
-# remove names to enable comparison
-names(resp_plm_pool) <- NULL
-names(resp_plm_fe) <- NULL
-names(resp_plm_fe_tw) <- NULL
-names(resp_plm_re) <- NULL
-
-names(resp_pFormula_pool) <- NULL
-names(resp_pFormula_fe) <- NULL
-names(resp_pFormula_fe_tw) <- NULL
-# names(resp_pFormula_re) <- NULL
-
-names(resp_plm_NA_depvar_pool)  <- NULL
-names(resp_plm_NA_depvar_fe)    <- NULL
-names(resp_plm_NA_depvar_fe_tw) <- NULL
-names(resp_plm_NA_depvar_re)    <- NULL
-
-names(resp_pFormula_NA_depvar_pool)  <- NULL
-# names(resp_pFormula_NA_depvar_fe)    <- NULL
-# names(resp_pFormula_NA_depvar_fe_tw) <- NULL
-# names(resp_pFormula_NA_depvar_re)    <- NULL
-
-
-names(resp_plm_NA_indepvar_pool)  <- NULL
-names(resp_plm_NA_indepvar_fe)    <- NULL
-names(resp_plm_NA_indepvar_fe_tw) <- NULL
-names(resp_plm_NA_indepvar_re)    <- NULL
-
-names(resp_pFormula_NA_indepvar_pool)  <- NULL
-names(resp_pFormula_NA_indepvar_fe)    <- NULL
-names(resp_pFormula_NA_indepvar_fe_tw) <- NULL
-# names(resp_pFormula_NA_indepvar_re)    <- NULL
-
 ##### interfaces: pFormula vs. plm
-if (!all.equal(resp_pFormula_pool,  resp_plm_pool)) stop("Fail! resp_pFormula_pool != resp_plm_pool")
-if (!all.equal(resp_pFormula_fe,    resp_plm_fe)) stop("Fail! resp_pFormula_fe != resp_plm_fe")
-if (!all.equal(resp_pFormula_fe_tw, resp_plm_fe_tw)) stop("Fail! resp_pFormula_fe_tw != resp_plm_fe_tw")
-#if (!all.equal(resp_pFormula_re,    resp_plm_re)) stop("Fail! resp_pFormula_re != resp_plm_re")
+if (!isTRUE(all.equal(resp_pFormula_pool,  resp_plm_pool))) stop("Fail! resp_pFormula_pool != resp_plm_pool")
+if (!isTRUE(all.equal(resp_pFormula_fe,    resp_plm_fe))) stop("Fail! resp_pFormula_fe != resp_plm_fe")
+if (!isTRUE(all.equal(resp_pFormula_fe_tw, resp_plm_fe_tw))) stop("Fail! resp_pFormula_fe_tw != resp_plm_fe_tw")
+#if (!isTRUE(all.equal(resp_pFormula_re,    resp_plm_re))) stop("Fail! resp_pFormula_re != resp_plm_re")
 
 # with NA in dependent variable
-if (!all.equal(resp_plm_NA_depvar_pool,  resp_pFormula_NA_depvar_pool)) stop("Fail! resp_plm_NA_depvar_pool != resp_pFormula_NA_depvar_pool")
-#if (!all.equal(resp_plm_NA_depvar_fe,    resp_pFormula_NA_depvar_fe)) stop("Fail! resp_plm_NA_depvar_fe != resp_pFormula_NA_depvar_fe")
-#if (!all.equal(resp_plm_NA_depvar_fe_tw, resp_pFormula_NA_depvar_fe_tw)) stop("Fail! resp_plm_NA_depvar_fe_tw != resp_pFormula_NA_depvar_fe_tw")
-#if (!all.equal(resp_plm_NA_depvar_re,    resp_pFormula_NA_depvar_re)) stop("Fail! resp_plm_NA_depvar_re != resp_pFormula_NA_depvar_re")
+if (!isTRUE(all.equal(resp_plm_NA_depvar_pool,  resp_pFormula_NA_depvar_pool,  check.attributes = FALSE))) stop("Fail! resp_plm_NA_depvar_pool != resp_pFormula_NA_depvar_pool")
+if (!isTRUE(all.equal(resp_plm_NA_depvar_fe,    resp_pFormula_NA_depvar_fe,    check.attributes = FALSE))) stop("Fail! resp_plm_NA_depvar_fe != resp_pFormula_NA_depvar_fe")
+if (!isTRUE(all.equal(resp_plm_NA_depvar_fe_tw, resp_pFormula_NA_depvar_fe_tw, check.attributes = FALSE))) stop("Fail! resp_plm_NA_depvar_fe_tw != resp_pFormula_NA_depvar_fe_tw")
+#if (!isTRUE(all.equal(resp_plm_NA_depvar_re,    resp_pFormula_NA_depvar_re, check.attributes = FALSE))) stop("Fail! resp_plm_NA_depvar_re != resp_pFormula_NA_depvar_re")
 
 
-# NOT OK: with NA in _in_dependent variable, fails due to different length of objects
-# if (!all(resp_plm_NA_indepvar_pool  == resp_pFormula_NA_indepvar_pool)) stop("Fail! resp_plm_NA_indepvar_pool != resp_pFormula_NA_indepvar_pool")
-# if (!all(resp_plm_NA_indepvar_fe    == resp_pFormula_NA_indepvar_fe)) stop("Fail! resp_plm_NA_indepvar_fe != resp_pFormula_NA_indepvar_fe")
-# if (!all(resp_plm_NA_indepvar_fe_tw == resp_pFormula_NA_indepvar_fe_tw)) stop("Fail! resp_plm_NA_indepvar_fe_tw != resp_pFormula_NA_indepvar_fe_tw")
-# if (!all(resp_plm_NA_indepvar_re    == resp_pFormula_NA_indepvar_re)) stop("Fail! resp_plm_NA_indepvar_re != resp_pFormula_NA_indepvar_re")
+# OK: with NA in _in_dependent variable
+if (!isTRUE(all.equal(resp_plm_NA_indepvar_pool,  resp_pFormula_NA_indepvar_pool,  check.attributes = FALSE))) stop("Fail! resp_plm_NA_indepvar_pool != resp_pFormula_NA_indepvar_pool")
+if (!isTRUE(all.equal(resp_plm_NA_indepvar_fe,    resp_pFormula_NA_indepvar_fe,    check.attributes = FALSE))) stop("Fail! resp_plm_NA_indepvar_fe != resp_pFormula_NA_indepvar_fe")
+if (!isTRUE(all.equal(resp_plm_NA_indepvar_fe_tw, resp_pFormula_NA_indepvar_fe_tw, check.attributes = FALSE))) stop("Fail! resp_plm_NA_indepvar_fe_tw != resp_pFormula_NA_indepvar_fe_tw")
+# if (!isTRUE(all.equal(resp_plm_NA_indepvar_re    == resp_pFormula_NA_indepvar_re, check.attributes = FALSE))) stop("Fail! resp_plm_NA_indepvar_re != resp_pFormula_NA_indepvar_re")
 
-if (!all(resp_plm_NA_indepvar_pool  == resp_pFormula_NA_indepvar_pool[-1])) stop("Fail! resp_plm_NA_indepvar_pool != resp_pFormula_NA_indepvar_pool")
-# NOT ok - fail due to differnt numbers
-# if (!all(resp_plm_NA_indepvar_fe    == resp_pFormula_NA_indepvar_fe[-1])) stop("Fail! resp_plm_NA_indepvar_fe != resp_pFormula_NA_indepvar_fe")
-# if (!all(resp_plm_NA_indepvar_fe_tw == resp_pFormula_NA_indepvar_fe_tw[-1])) stop("Fail! resp_plm_NA_indepvar_fe_tw != resp_pFormula_NA_indepvar_fe_tw")
-# if (!all(resp_plm_NA_indepvar_re    == resp_pFormula_NA_indepvar_re[-1])) stop("Fail! resp_plm_NA_indepvar_re != resp_pFormula_NA_indepvar_re")
